# AI-emoji-maker-fastAPI

./: .env.example  README.md  pyproject.toml  requirements.txt  schema.sql  verify.py
.github/workflows/: backend-ci.yml  backend-deploy.yml
app/: config.py  main.py
app/api/: deps.py
app/api/routes/: auth.py  emoji.py  user.py
app/schemas/: auth.py  emoji.py
app/services/: aiml_service.py  supabase_service.py
documentation/: api-endpoints.md
tests/: test_aimlapi.py  test_supabase.py
